--- a/src/styles/sections.css
+++ b/src/styles/sections.css
@@ -1268,7 +1268,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 90;
     display: flex !important;
     flex-direction: column;
     align-items: center;
